# sdl2_cxx

./: .appveyor.yml  .clang-format  .gitmodules  .travis.linux  .travis.osx  .travis.yml  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  example_01.cxx
inc/sdl2_cxx/: core.hxx  events.hxx  image.hxx  net.hxx  time.hxx  video.hxx
inc/sdl2_cxx/core/: error.hxx  hints.hxx  init.hxx  log.hxx  stdinc.hxx
inc/sdl2_cxx/detail/: bitmask.hxx  interfaces.hxx  type_traits.hxx  wrapper.hxx
inc/sdl2_cxx/events/: event.hxx  event_handler.hxx  event_types.hxx  keyboard.hxx  keycode.hxx  mouse.hxx  scancode.hxx
inc/sdl2_cxx/fonts/: ttf.hxx
inc/sdl2_cxx/image/: image.hxx
inc/sdl2_cxx/net/: core.hxx  tcp.hxx  udp.hxx
inc/sdl2_cxx/platform/: endian.hxx
inc/sdl2_cxx/time/: timer.hxx
inc/sdl2_cxx/video/: blendmode.hxx  color.hxx  opengl.hxx  pixels.hxx  point.hxx  rect.hxx  render.hxx  surface.hxx  texture.hxx  window.hxx
src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/example/sdl2/: 01_example_hello_sdl.cxx  CMakeLists.txt
src/example/sdl2_net/: 01_net_tcp_client.cxx  01_net_tcp_server.cxx  CMakeLists.txt  tcp_server.cxx
src/examples/: CMakeLists.txt
src/examples/data/: fs1.glsl  vs1.glsl
src/examples/sdl2/: 02_core_opengl.cxx  03_core_modern_opengl.cxx  03_core_opengl.cxx  CMakeLists.txt
src/examples/sdl2_mixer/: 01_mixer_player.cxx  CMakeLists.txt
src/examples/sdl2_net/: 02_net_udp.cxx  CMakeLists.txt
src/test/: CMakeLists.txt  event_dispatch_timer.cxx
src/test/core/: init_test.cxx  log_test.cxx
src/test/detail/: type_traits_test.cxx
src/test/image/: image_test.cxx
src/test/net/: tcp_tests.cxx  udp_tests.cxx
src/test/platform/: endian_test.cxx
src/test/time/: timer_test.cxx
src/test/video/: opengl_tests.cxx  point_test.cxx  rect_test.cxx  surface_test.cxx  window_test.cxx
test/: CMakeLists.txt
test/core/: init_test.cxx  log_test.cxx
test/detail/: bitmask_test.cxx
test/events/: event_handler_test.cxx
test/image/: image_test.cxx
test/platform/: endian_test.cxx
test/time/: timer_test.cxx
test/video/: color_test.cxx  pixels_test.cxx  point_test.cxx  rect_test.cxx  render_test.cxx  surface_test.cxx  window_test.cxx
